# monte

./: pyproject.toml
src/monte/: main.py
tests/: test_monte.py
