[tool.poetry]
name = "monte"
version = "0.1.0"
description = ""
authors = ["Tom Faulkner <tomfaulkner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
